793142853 [AIGI] History - added timeline content block

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -25,6 +25,7 @@
 @import 'sponsor-block-styles.css';
 @import 'partners-block-styles.css';
 @import 'testimonials-styles.css';
+@import 'timeline-block-styles.css';
 
 
 
