827661481 [AIGI] Testimonials - added position:relative to timeline-section

--- a/wp-content/themes/aigi/assets/css/timeline-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/timeline-block-styles.css
@@ -1,6 +1,7 @@
 
 .timeline__section {
     padding: 64px 0;
+    position: relative;
 }
 .timeline__section .heading-block {
     text-align: center;
