--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -298,6 +298,89 @@ strong {
     letter-spacing: 0.05em;
     color: #000;
 }
+
+.variety-section .text_item.medium-text,
+.variety-section .text_item.medium-text p {
+    color: #4D4D4D;
+}
+
+.text_item.big-heading,
+.text_item.big-heading p {
+    font-weight: bold;
+    font-size: 30.35px;
+    line-height: 36px;
+    letter-spacing: 0.02em;
+    color: var(--color-brand-m-blue-primary);
+}
+.text-light .text_item.big-heading,
+.text-light .text_item.big-heading p {
+    color: #FFF;
+}
+
+.text_item.heading,
+.text_item.heading p {
+    font-weight: bold;
+    font-size: 26.97px;
+    line-height: 30px;
+    letter-spacing: 0.02em;
+    color: var(--color-brand-navy-primary);
+}
+
+.text-light .text_item.heading,
+.text-light .text_item.heading p {
+    color: #fff;
+}
+
+.text_item.subheading,
+.text_item.subheading p {
+    font-weight: bold;
+    font-size: 21.31px;
+    line-height: 23px;
+    letter-spacing: 0.02em;
+    color: var(--color-brand-navy-primary);
+}
+.text-light .text_item.subheading,
+.text-light .text_item.subheading p {
+    color: #fff;
+}
+
+.text_item.subheading-orange,
+.text_item.subheading-orange p {
+    font-weight: 600;
+    font-size: 22.78px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--color-brand-earth-primary);
+}
+.text-light .text_item.subheading-orange,
+.text-light .text_item.subheading-orange p {
+    color: #fff;
+}
+
+.text_item.medium-text,
+.text_item.medium-text p {
+    font-size: 16.88px;
+    line-height: 27px;
+    letter-spacing: 0.05em;
+    color: #000000;
+}
+.text-light .text_item.medium-text,
+.text-light .text_item.medium-text p {
+    color: #fff;
+}
+
+.text_item.small-text,
+.text_item.small-text p {
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+.text-light .text_item.small-text,
+.text-light .text_item.small-text p {
+    color: #fff;
+}
+
+
 @media (min-width: 1441px) {
     h1, .h1 {
         font-size: 38.41px;
@@ -343,6 +426,49 @@ strong {
     }
     strong {
     }
+
+    .text_item.big-heading,
+    .text_item.big-heading p {
+        font-size: 22.47px;
+        line-height: 27px;
+        letter-spacing: 0.02em;
+    }
+    .text_item.heading,
+    .text_item.heading p {
+        font-size: 19.98px;
+        line-height: 25px;
+        letter-spacing: 0.02em;
+        color: var(--color-brand-m-blue-primary);
+    }
+
+    .text_item.subheading,
+    .text_item.subheading p {
+        font-size: 15.78px;
+        line-height: 20px;
+        letter-spacing: 0.02em;
+    }
+
+    .text_item.subheading-orange,
+    .text_item.subheading-orange p {
+        font-size: 18px;
+        line-height: 29px;
+        letter-spacing: 0.06em;
+    }
+
+    .text_item.medium-text,
+    .text_item.medium-text p {
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+    }
+
+    .text_item.small-text,
+    .text_item.small-text p {
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+    }
+
 }
 /*************************** WRAPPING STYLES **************************/
 .wrapper-1245 {
@@ -2045,3 +2171,4 @@ input[type="submit"].btn-transparent-white:hover {
     margin-right: 10px;
     cursor: pointer;
 }
+
