--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -320,8 +320,8 @@ strong {
 .text_item.heading,
 .text_item.heading p {
     font-weight: bold;
-    font-size: 26.97px;
-    line-height: 30px;
+    font-size: 30.35px;
+    line-height: 36px;
     letter-spacing: 0.02em;
     color: var(--color-brand-navy-primary);
 }
@@ -334,8 +334,8 @@ strong {
 .text_item.subheading,
 .text_item.subheading p {
     font-weight: bold;
-    font-size: 21.31px;
-    line-height: 23px;
+    font-size: 19.98px;
+    line-height: 22px;
     letter-spacing: 0.02em;
     color: var(--color-brand-navy-primary);
 }
@@ -435,16 +435,20 @@ strong {
     }
     .text_item.heading,
     .text_item.heading p {
-        font-size: 19.98px;
-        line-height: 25px;
+        font-size: 22.47px;
+        line-height: 27px;
         letter-spacing: 0.02em;
         color: var(--color-brand-m-blue-primary);
+    }
+    .variety-section  .text_item.heading,
+    .variety-section  .text_item.heading p {
+        color: var(--color-brand-navy-primary);
     }
 
     .text_item.subheading,
     .text_item.subheading p {
-        font-size: 15.78px;
-        line-height: 20px;
+        font-size: 17.76px;
+        line-height: 22px;
         letter-spacing: 0.02em;
     }
 
