--- a/wp-content/themes/aigi/assets/css/header-slider-styles.css
+++ b/wp-content/themes/aigi/assets/css/header-slider-styles.css
@@ -193,6 +193,17 @@
     justify-content: space-between;
     padding: 0 32px;
 }
+.fwslider-nav {
+    position: absolute;
+    top: calc(50% - 21px);
+    z-index: 10;
+    height: 49px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 32px;
+}
 .header-slider__section .slider-arrow:hover {
     background-color: var(--color-brand-earth-primary);
 }
@@ -317,7 +328,13 @@
         bottom: 0;
         top: unset;
         padding: 0 16px;
-        background-color: rgba(255, 255, 255, 0.2);;
+        background-color: rgba(255, 255, 255, 0.2);
+    }
+    .fwslider-nav {
+        bottom: 0;
+        top: unset;
+        padding: 0 16px;
+        background-color: rgba(255, 255, 255, 0.2);
     }
     .slider__progress-bar.wrapper-1245 {
         bottom: 64px;
