793125705 [AIGI] Contact Us page - added Full Width Map block

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -27,6 +27,7 @@
 @import 'testimonials-styles.css';
 @import 'timeline-block-styles.css';
 @import 'fullwidth-slider-styles.css';
+@import 'acf-map-styles.css';
 
 
 
