--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -598,6 +598,8 @@ strong {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .has-sidebar.sidebar-left {
     flex-direction: row;
@@ -647,6 +649,13 @@ strong {
         border-right: none;
         padding-bottom: 24px;
     }
+    .main-inner__contact-us .has-sidebar.sidebar-right .col-content,
+    .main-inner__contact-us .has-sidebar.sidebar-left .col-content {
+        border-bottom: 1px solid var(--color-line-separator);
+        padding-bottom: 0;
+    }
+
+
     .has-sidebar,
     .has-sidebar.sidebar-left {
         flex-direction: column;
@@ -664,6 +673,9 @@ strong {
         max-width: unset;
         width: 100%;
         padding: 32px 0;
+    }
+    .main-inner__contact-us .col-sidebar {
+        padding: 24px 0;
     }
     .col-content {
         padding-top: 16px;
@@ -1058,6 +1070,57 @@ strong {
 .gfield input[type="password"]:focus {
     outline: none;
 }
+body .gform_wrapper.gravity-theme .gfield input,
+body .gform_wrapper.gravity-theme .gfield select {
+    height: 48px;
+}
+body .gfield textarea,
+body .gform_wrapper.gravity-theme .gfield textarea,
+body .gform_wrapper.gravity-theme .gfield textarea.large {
+    height: 146px;
+}
+
+input[type="submit"].gform_button {
+    min-width: 217px;
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 15px;
+    line-height: 1!important;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 17px 20px;
+    transition: all .3s;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    background-color: var(--color-brand-m-blue-primary);
+    color: white;
+    border: unset;
+    line-height: 1;
+}
+.gform_footer {
+    margin: 0;
+    padding: 10px 0;
+    position: relative;
+}
+.gform_footer::after {
+    content: '';
+    border: 4px solid transparent;
+    border-left: 4px solid white;
+    display: inline-block;
+    position: absolute;
+    top: 36px;
+    right: 23px;
+}
 
 .form-heading {
     margin-bottom: 32px;
@@ -1075,6 +1138,29 @@ strong {
     line-height: 22px;
     letter-spacing: 0.08em;
 }
+body .gform_wrapper.gravity-theme .gform_footer,
+body .gform_wrapper.gravity-theme .gform_page_footer {
+    padding: 8px 0;
+    margin: 0;
+}
+body .gform_footer::after {
+    top: 30px;
+}
+
+/* Contact us form */
+.contact-us__form-wrapper input[type="submit"].gform_button {
+    color: #FFFFFF;
+    background-color: var(--color-h-secondary-blue);
+    border: 1px solid var(--color-h-secondary-blue);
+}
+.contact-us__form-wrapper input[type="submit"].gform_button:hover {
+    background-color: var(--color-brand-m-blue-primary);
+    border: 1px solid var(--color-brand-m-blue-primary);
+}
+.contact-us__form-wrapper .gform_footer {
+    max-width: 49%;
+}
+
 @media (max-width: 767px) {
     .form-heading {
         margin-bottom: 10px;
@@ -1084,6 +1170,14 @@ strong {
     }
     .w50 {
         width: 100%;
+    }
+
+    /*Contact us form*/
+    .contact-us__form-wrapper {
+        padding: 32px 0 16px;
+    }
+    .contact-us__form-wrapper .gform_footer {
+        max-width: 100%;
     }
 }
 
@@ -2205,4 +2299,3 @@ input[type="submit"].btn-transparent-white:hover {
     margin-right: 10px;
     cursor: pointer;
 }
-
