--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -717,6 +717,9 @@ strong {
 .bg_primary_grey {
     background-color: var(--color-primary-bg);
 }
+.bg_color_white {
+    background-color: #ffffff;
+}
 /*************************** Content Tags ******************************/
 .content-tags {
     margin-bottom: 28px;
@@ -1152,6 +1155,7 @@ body .gform_footer::after {
     color: #FFFFFF;
     background-color: var(--color-h-secondary-blue);
     border: 1px solid var(--color-h-secondary-blue);
+    padding: 16.5px 20px;
 }
 .contact-us__form-wrapper input[type="submit"].gform_button:hover {
     background-color: var(--color-brand-m-blue-primary);
