multicolumn block - preparing

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -28,6 +28,7 @@
 @import 'timeline-block-styles.css';
 @import 'fullwidth-slider-styles.css';
 @import 'acf-map-styles.css';
+@import 'multicolumn-block-styles.css';
 
 
 
