793159401 [AIGI]  FAQ's page - added button group to template. Created single column template

--- a/wp-content/themes/aigi/assets/css/profile-list-styles.css
+++ b/wp-content/themes/aigi/assets/css/profile-list-styles.css
@@ -73,6 +73,7 @@
     }
     .profile-list__item .speakers__image {
         width: 46px;
+        min-width: 46px;
         height: 46px;
         margin-bottom: 16px;
     }
