--- a/wp-content/themes/aigi/assets/css/rslider-styles.css
+++ b/wp-content/themes/aigi/assets/css/rslider-styles.css
@@ -206,6 +206,7 @@
 }
 .speakers__image {
     width: 80px;
+    min-width: 80px;
     height: 80px;
     border-radius: 5px;
     overflow: hidden;
