--- a/wp-content/themes/aigi/assets/css/single-page-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-page-styles.css
@@ -1,6 +1,9 @@
 .content-item {
     margin: 32px 0;
 }
+.content-item:first-child {
+    margin-top: 0;
+}
 .content-item:last-child {
     margin-bottom: 0;
 }
@@ -159,6 +162,17 @@
     padding: 16px 32px;
 }
 
+
+/*buttons block*/
+/*.single-column__inner .single-resource__container {*/
+/*    max-width: 1016px;*/
+/*    padding-bottom: 0;*/
+/*}*/
+
+.content-item.buttons-block {
+    margin-bottom: 48px;
+}
+
 @media (max-width: 767px) {
     .accordion_btn {
         padding: 16px 0;
@@ -174,7 +188,7 @@
     .accordion_content {
         font-size: 15px;
         line-height: 24px;
-        padding: 0 0 16px;
+        padding: 16px 0;
     }
     .accordion_btn:before {
         top: 23px;
