--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -28,6 +28,7 @@
 @import 'timeline-block-styles.css';
 @import 'fullwidth-slider-styles.css';
 @import 'acf-map-styles.css';
+@import 'vacancies-block-styles.css';
 
 
 
@@ -743,6 +744,9 @@ strong {
 }
 .bg_color_green {
     background-color: var(--color-h-secondary-green);
+}
+.bg_color_primary_green {
+    background-color: var(--color-h-primary-green);
 }
 .bg_color_turquoise {
     background-color: var(--color-p-secondary-green);
@@ -1752,6 +1756,38 @@ input[type="submit"].btn-body {
     padding-left: 10px;
 }
 
+/*download*/
+.btn-m-blue.download:after,
+.btn-h-secondary-blue.download:after,
+.btn-m-blue.download:before,
+.btn-h-secondary-blue.download:before {
+    background-image: url("../images/download-white.svg");
+}
+.btn-white.download:after,
+.btn-white.download:before {
+    background-image: url("../images/download.svg");
+}
+.btn-white.download:hover:after,
+.btn-white.download:hover:before {
+    background-image: url("../images/download-white.svg");
+}
+.btn-navy.download:after,
+.btn-navy.download:before {
+    background-image: url("../images/download-navy.svg");
+}
+.btn-navy.download:hover:after,
+.btn-navy.download:hover:before {
+    background-image: url("../images/download.svg");
+}
+.btn-transparent.download:after,
+.btn-transparent.download:before {
+    background-image: url("../images/download-white.svg");
+}
+.btn-transparent-white.download:after,
+.btn-transparent-white.download:before {
+    background-image: url("../images/download-white.svg");
+}
+
 /*Btn Colors*/
 .btn-m-blue,
 input[type="submit"].btn-m-blue {
@@ -2357,3 +2393,6 @@ input[type="submit"].btn-transparent-white:hover {
     margin-right: 10px;
     cursor: pointer;
 }
+
+
+/*Heading block*/
