791353832 [AIGI] News Single Page - added template and styles for single news page

--- a/wp-content/themes/aigi/assets/css/rslider-styles.css
+++ b/wp-content/themes/aigi/assets/css/rslider-styles.css
@@ -34,6 +34,7 @@
     justify-content: space-between;
     display: flex;
     align-items: flex-start;
+    margin-bottom: 22px;
 }
 .heading-block {
     margin-bottom: 50px;
