--- a/wp-content/themes/aigi/assets/css/single-event-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-event-styles.css
@@ -106,12 +106,12 @@
     margin-right: 10px;
 }
 .post-details__link {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.08em;
-    color: inherit;
-    text-decoration: none;
+    /*font-weight: normal;*/
+    /*font-size: 14px;*/
+    /*line-height: 22px;*/
+    /*letter-spacing: 0.08em;*/
+    /*color: inherit;*/
+    /*text-decoration: none;*/
 }
 
 
