791352510 [AIGI] News Landing Page - fixed styles for posts tiles

--- a/wp-content/themes/aigi/assets/css/post-tile-styles.css
+++ b/wp-content/themes/aigi/assets/css/post-tile-styles.css
@@ -187,7 +187,11 @@
     max-width: 319px;
     height: 311px;
 }
-.landing-page .post-tile__img-box {
+.landing-page .post-tile__wrap .post-tile__img-box {
+    width: 49%;
+    max-width: 319px;
+}
+.landing-page .post-tile__wrap.event .post-tile__img-box {
     width: 49%;
     max-width: 268px;
 }
