--- a/wp-content/themes/aigi/assets/css/vacancies-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/vacancies-block-styles.css
@@ -10,6 +10,14 @@
     text-align: center;
     width: 100%;
     margin: 0 auto 22px;
+    font-size: 30.35px;
+    line-height: 36px;
+    letter-spacing: 0.02em;
+}
+.vacancies__section .rslider__desc {
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
 }
 .vacancies__list {
     width: 100%;
