--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -217,6 +217,14 @@ li:before {
     width: 8px;
     height: 9px;
 }
+.rounded-list li:before {
+    border-radius: 50%;
+    background-color: #4D4D4D;
+    background-image: unset;
+    top: 9px;
+    width: 4px;
+    height: 4px;
+}
 select {
     padding: 16px;
     width: 271px;
@@ -694,6 +702,12 @@ strong {
     .has-sidebar.sidebar-right {
         flex-direction: column-reverse;
     }
+    .single-aigi_staff .has-sidebar.sidebar-right {
+        flex-direction: column;
+    }
+    .single-aigi_staff .col-sidebar {
+        padding-bottom: 0;
+    }
     .has-sidebar__inner {
         padding: 0;
     }
@@ -799,6 +813,9 @@ strong {
     text-decoration: none;
 }
 .single-news .content-tags__item {
+    padding: 4px 10px;
+}
+.content-tags__item.small {
     padding: 4px 10px;
 }
 @media (max-width: 767px) {
@@ -2380,6 +2397,10 @@ input[type="submit"].btn-transparent-white:hover {
     padding: 16px 0;
     margin-top: 24px;
     border-top: 1px solid #DFDFDF;
+    display: none;
+}
+.footones_custom_wrapper.visible {
+    display: block;
 }
 .footones_custom_list {
     padding-left: 0;
