--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -31,6 +31,7 @@
 @import 'multicolumn-block-styles.css';
 @import 'vacancies-block-styles.css';
 @import 'team-block-styles.css';
+@import 'partners-tiles-styles.css';
 
 
 
