Modal - updated styles for modal gallery

--- a/wp-content/themes/aigi/assets/css/partners-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/partners-block-styles.css
@@ -41,6 +41,7 @@
     top: 30px;
     right: 30px;
     cursor: pointer;
+    z-index: 10;
 }
 .partners_item_popup_content_wrapper {
     position: absolute;
