--- a/wp-content/themes/aigi/assets/css/popup-styles.css
+++ b/wp-content/themes/aigi/assets/css/popup-styles.css
@@ -41,6 +41,7 @@
     top: 30px;
     right: 30px;
     cursor: pointer;
+    z-index: 10;
 }
 .popup_content_wrapper {
     width: 100%;
@@ -59,8 +60,7 @@
 
     position: relative;
 }
-.popup_content_wrapper:before,
-.partners_item_popup_content_wrapper:before {
+.popup_content_wrapper:before {
     content: '';
     width: 100%;
     height: 50px;
