--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -2010,7 +2010,8 @@ input[type="submit"].btn-transparent-white:hover {
 .highlighted-img img {
     width: 100%;
     /*height: 100%;*/
-    height: 339px;
+    /*height: 339px;*/
+    height: auto;
     max-width: 339px;
     /*margin-right: 14px;*/
     object-fit: cover;
